--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <div class="header">
   <div class="logo">
-      <a href="https://codepen.io/ENigma_YT/pen/GRQxJzd"><img id="logo" src="https://i.ibb.co/yBX5CY7/TPS-Logo-final2.png"></a>
-      <!-- Link the logo to the homepage. Add homepage link to href= -->
+      <a href="https://enigmayt69420.github.io/Homepage/"><img id="logo" src="https://i.ibb.co/yBX5CY7/TPS-Logo-final2.png"></a>
   </div>
   <h1>Checkout</h1>
   <a href=""><img id="cart" src="https://i.ibb.co/60Y9LM6/Cart.png"></a>
