--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <div class="sections">
   <div class="info">
-    <form action="">      <!-- "This is where the data will go to(picture)"-->
+    <form action="">      <!-- "This is where the data will go to" Add if you want to save the data-->
       <h2>Shipping Information</h2>
       
       <label for="name">Full Name</label><br>
