--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
       <a href="https://enigmayt69420.github.io/Homepage/"><img id="logo" src="https://i.ibb.co/yBX5CY7/TPS-Logo-final2.png"></a>
   </div>
   <h1>Checkout</h1>
-  <a href=""><img id="cart" src="https://i.ibb.co/60Y9LM6/Cart.png"></a>
-  <!-- connect cart to cart page -->
+  <a href=""><img id="cart" src="">https://enigmayt69420.github.io/Cart/</a>
 </div>
 
 <div class="sections">
