--- a/index.html
+++ b/index.html
@@ -112,4 +112,8 @@
   </div>
 </div>
 
+<div class="footer">
+  <p>© 2022, The Paruta Store, Inc.</p>
+</div>
+
 <link rel="stylesheet" type="text/css" href="index.css"/>
