--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
   </div>
   <div class="checkout">
     <h2>Order Summary</h2>
-      <p><a href="#">Item 1</a> <span class="price">¥6,868</span></p>
-      <p><a href="#">Item 2</a> <span class="price">¥285</span></p>
-      <p><a href="#">Item 3</a> <span class="price">¥9,852</span></p>
-      <p><a href="#">Item 4</a> <span class="price">¥984</span></p><br><hr>
-      <p><a>Total</a> <span class="price">¥17,989</span><br>
+      <p><a href="#">Super Mario Galaxy</a> <span class="price">¥1,569</span></p>
+      <p><a href="#">Super Mario Galaxy</a> <span class="price">¥1,569</span></p>
+      <p><a href="#">Minecraft</a> <span class="price">¥3,498</span></p>
+      <p><a href="#">Halo</a> <span class="price">¥5,191</span></p><br><hr>
+      <p><a>Total</a> <span class="price">¥11,827</span><br>
       <input type="submit" value="Place Order" class="btn">
     </form> 
   </div>
